--- a/4 course 1 sem/Lab_work_TC_pendulum.ipynb
+++ b/4 course 1 sem/Lab_work_TC_pendulum.ipynb
@@ -279,8 +279,7 @@
     "anim = system_anim(res)\n",
     "#video = HTML(anim.to_html5_video())\n",
     "#mywriter = anim.FFMpegWriter()\n",
-    "anim.save('mymovie.mp4')\n",
-    "\n"
+    "anim.save('mymovie.mp4')"
    ]
   },
   {
